# FdF

./: CMakeLists.txt  Makefile
inc/: fdf.h
maps/: smallest.fdf
src/: adjust_map.c  ft_hextoi.c  ft_strnsplit.c  hookers.c  image.c  main.c  menu.c  read_fdf.c  render.c  transformations.c  transformations_2.c
